# network_turn_based_game

./: .gitignore  CMakeLists.txt  README.md  client_entry_point.cpp  config_file  server_entry_point.cpp  vcpkg.json
common/include/: Allocator.h  Metrics.h
common/src/: Allocator.cpp
docs/html/: annotated.html  class_client_network_interface-members.html  class_client_network_interface.html  class_client_network_manager-members.html  class_client_network_manager.html  class_http_interface-members.html  class_http_interface.html  class_http_manager-members.html  class_http_manager.html  class_lobby-members.html  class_lobby.html  class_server_network_interface-members.html  class_server_network_interface.html  class_server_network_manager-members.html  class_server_network_manager.html  classes.html  client__network__interface_8h.html  client__network__interface_8h_source.html  client__network__manager_8h.html  client__network__manager_8h_source.html  dir_1e119bf5798b100ade334e449bc65a45.html  dir_9cab7fff190c08877a2347b5fd32e1ed.html  dir_ac74dfff160f273f7db7b191ec8c4d8f.html  dir_c901c14b65aa229498a52b725b3d4a2c.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  globals_func.html  globals_type.html  hierarchy.html  http__interface_8h.html  http__interface_8h_source.html  http__manager_8h.html  http__manager_8h_source.html  index.html  lobby_8h.html  (+19 more)
docs/html/search/: all_0.js  all_1.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_4.js  enums_0.js  enums_1.js  files_0.js  files_1.js  files_5.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  pages_0.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  pages_6.js  pages_7.js  searchdata.js  typedefs_0.js  (+4 more)
docs/latex/: annotated.tex  class_client_network_interface.eps  class_client_network_interface.tex  class_client_network_manager.eps  class_client_network_manager.tex  class_http_interface.eps  class_http_interface.tex  class_http_manager.eps  class_http_manager.tex  class_lobby.tex  class_server_network_interface.eps  class_server_network_interface.tex  class_server_network_manager.eps  class_server_network_manager.tex  client__network__interface_8h.tex  client__network__interface_8h_source.tex  client__network__manager_8h.tex  client__network__manager_8h_source.tex  dir_1e119bf5798b100ade334e449bc65a45.tex  dir_9cab7fff190c08877a2347b5fd32e1ed.tex  dir_ac74dfff160f273f7db7b191ec8c4d8f.tex  dir_c901c14b65aa229498a52b725b3d4a2c.tex  files.tex  hierarchy.tex  http__interface_8h.tex  http__interface_8h_source.tex  http__manager_8h.tex  http__manager_8h_source.tex  index.tex  lobby_8h.tex  lobby_8h_source.tex  main__page_8md.tex  md_network_2include_2main__page.tex  packet_8h.tex  packet_8h_source.tex  refman.tex  server__network__interface_8h.tex  server__network__interface_8h_source.tex  server__network__manager_8h.tex  server__network__manager_8h_source.tex  (+5 more)
main/: client_entry_point.cpp  server_entry_point.cpp
main/include/: ClientApplication.h  button.h  client_application.h  client_identifier.h  game.h  game_graphics_manager.h  graphics_interface.h  graphics_manager.h  gui.h  identification_gui.h  lobby_gui.h  main_menu_gui.h  server.h
main/src/: ClientApplication.cpp  button.cpp  client_application.cpp  client_identifier.cpp  game.cpp  game_graphics_manager.cpp  graphics_manager.cpp  gui.cpp  identification_gui.cpp  lobby_gui.cpp  main_menu_gui.cpp  server.cpp
network/include/: client.h  client_identifier.h  client_network_interface.h  client_network_manager.h  constants.h  lobby.h  main_page.md  network_interface.h  packet.h  server.h  server_network_interface.h  server_network_manager.h  types.h
network/include/client/: client_identifier.h  client_network_manager.h
network/include/server/: http_interface.h  http_manager.h  lobby.h  server.h  server_network_interface.h  server_network_manager.h
network/src/: ClientSocket.cpp  client.cpp  client_identifier.cpp  client_network_manager.cpp  lobby.cpp  network_interface.cpp  packet.cpp  server.cpp  server_network_manager.cpp
network/src/client/: client_identifier.cpp
network/src/server/: http_manager.cpp  lobby.cpp  server.cpp  server_network_manager.cpp
network/tests/: tests_lobby.cpp  tests_server.cpp
physics_engine/include/: Body.h  ContactListener.h  QuadTree.h  World.h
physics_engine/src/: ContactSolver.cpp  QuadTree.cpp  World.cpp
